@@ -1,29 +1,0 @@
-/********************************************************************\
- * dialog-nextrun.h - Beginnings of "since last run" dialog.        *
- * Copyright (c) 2001 Joshua Sled <jsled@asynchronous.org>          *
- *                                                                  *
- * This program is free software; you can redistribute it and/or    *
- * modify it under the terms of the GNU General Public License as   *
- * published by the Free Software Foundation; either version 2 of   *
- * the License, or (at your option) any later version.              *
- *                                                                  *
- * This program is distributed in the hope that it will be useful,  *
- * but WITHOUT ANY WARRANTY; without even the implied warranty of   *
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the    *
- * GNU General Public License for more details.                     *
- *                                                                  *
- * You should have received a copy of the GNU General Public License*
- * along with this program; if not, contact:                        *
- *                                                                  *
- * Free Software Foundation           Voice:  +1-617-542-5942       *
- * 59 Temple Place - Suite 330        Fax:    +1-617-542-2652       *
- * Boston, MA  02111-1307,  USA       gnu@gnu.org                   *
-\********************************************************************/
-
-#ifndef DIALOG_NEXTRUN_H
-#define DIALOG_NEXTRUN_H
-
-void gnc_ui_nextrun_dialog_create( void );
-void gnc_ui_nextrun_guile_wrapper( char* );
-
-#endif
